fixed card shine seam issue -  replaced negated background-position with calc(100% - var) to keep tile boundaries outside visible area

--- a/assets/scss/projects.scss
+++ b/assets/scss/projects.scss
@@ -749,7 +749,7 @@
 
     background-blend-mode: screen, hue, hard-light;
     background-repeat: no-repeat, repeat, repeat, no-repeat;
-    background-position: center, 0% var(--background-y), calc( var(--background-x) * -1) calc( var(--background-y) * -1), var(--background-x) var(--background-y);
+       background-position: center, 0% var(--background-y), calc(100% - var(--background-x)) calc(100% - var(--background-y)), var(--background-x) var(--background-y);
     background-size: 100% 100%, 200% 400%, 195% 100%, 200% 100%;
 
     filter: brightness(1) contrast(2.5) saturate(1.75);
